@@ -1,3 +1,7 @@
+* 2008-01-10 - thorben.betten@open-xchange.com
+
+ - Bugfix #10668: Decoding for newer mail-safe encoding as per RFC2231
+
 * 2008-01-09 - thorben.betten@open-xchange.com
 
  - Bugfix #10214: Using "Java port of Mozilla charset detector" to guess
